[gd_scene load_steps=16 format=3 uid="uid://bqqre42sbdbua"]

[ext_resource type="Script" path="res://scene/enemys/enemy_base/enemy_base.gd" id="1_mcymg"]
[ext_resource type="Texture2D" uid="uid://xanlet1y82b0" path="res://asset/pic/enemy/kedamaD.png" id="2_o3xt7"]
[ext_resource type="Texture2D" uid="uid://csxuo6kjhraty" path="res://asset/pic/enemy/kedamaL.png" id="3_w4sb4"]
[ext_resource type="Texture2D" uid="uid://cgx3bwy3aimev" path="res://asset/pic/enemy/kedamaU.png" id="4_0hteq"]
[ext_resource type="Script" path="res://scene/enemys/enemy_base/mob_buffcomponent.gd" id="4_2avwg"]
[ext_resource type="Texture2D" uid="uid://cdxlsrs4eqeau" path="res://asset/pic/enemy/kedamaR.png" id="5_o8hrx"]
[ext_resource type="PackedScene" uid="uid://clvkueof1i4cp" path="res://scene/enemys/enemy_base/damageNum.tscn" id="8_cu48r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gjmvx"]
atlas = ExtResource("2_o3xt7")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_56aes"]
atlas = ExtResource("3_w4sb4")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea52i"]
atlas = ExtResource("4_0hteq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tprp0"]
atlas = ExtResource("5_o8hrx")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4gakf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjmvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56aes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea52i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea52i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tprp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjmvx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_itioj"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_v8ilp"]
radius = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2yl7h"]
bg_color = Color(1, 1, 1, 1)

[node name="enemy_base" type="CharacterBody2D"]
z_index = 10
z_as_relative = false
collision_layer = 2
motion_mode = 1
safe_margin = 2.0
script = ExtResource("1_mcymg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
z_as_relative = false
scale = Vector2(0.3, 0.3)
skew = -0.0122173
sprite_frames = SubResource("SpriteFrames_4gakf")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_itioj")

[node name="melee_damage_area" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="melee_damage_area" type="CollisionShape2D" parent="melee_damage_area"]
shape = SubResource("CircleShape2D_v8ilp")

[node name="melee_attack_cd" type="Timer" parent="melee_damage_area"]

[node name="bullet_damage_area" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet_damage_area"]
shape = SubResource("CircleShape2D_v8ilp")

[node name="bullet_attack_cd" type="Timer" parent="bullet_damage_area"]

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.926299, 2.5028e-06, 1.54018e-06, 1)
offset_left = -14.0
offset_top = -18.0
offset_right = 130.0
offset_bottom = 2.0
scale = Vector2(0.2, 0.125)
tooltip_text = "
"
theme_override_styles/fill = SubResource("StyleBoxFlat_2yl7h")
step = 1.0
value = 100.0
show_percentage = false

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="buff" type="Node" parent="."]
script = ExtResource("4_2avwg")

[node name="DamageNum" parent="." instance=ExtResource("8_cu48r")]
visible = false

[node name="outscreen_disppear" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="outscreen_disppear" to="." method="_on_outscreen_disppear_timeout"]
